--- a/BearClassifier.ipynb
+++ b/BearClassifier.ipynb
@@ -31,6 +31,8 @@
    "source": [
     "#from fastbook import *\n",
     "#from fastai.vision.widgets import *"
+    "!pip install voila"
+    "!jupyter serverextension enable voila —sys-prefix"
    ]
   },
   {
