--- a/bear_classifier_2.ipynb
+++ b/bear_classifier_2.ipynb
@@ -8,9 +8,8 @@
    "source": [
     "#!pip uninstall -y fastai\n",
     "#from fastai2 import *\n",
-    "from fastai2.vision.all import *\n",
-    "from fastai2.vision.widgets import *\n",
-    "from fastai.vision.core import PILImage"
+    "from fastai.vision.all import *\n",
+    "from fastai.vision.widgets import *"
    ]
   },
   {
