--- a/bear_classifier_2.ipynb
+++ b/bear_classifier_2.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -19,36 +18,25 @@
    ],
    "source": [
     "#!pip install voila\n",
-    "!jupyter serverextension enable voila --sys-prefix"
+    "#!jupyter serverextension enable voila --sys-prefix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-=======
-   "execution_count": 18,
->>>>>>> af263f5a405a2f04be6e515e83159cad0c0bd85e
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "#!pip uninstall -y fastai\n",
     "#from fastai2 import *\n",
     "from fastai.vision.all import *\n",
-<<<<<<< HEAD
     "from fastai2.vision.widgets import *\n",
     "#from fastai.vision.core import PILImage"
-=======
-    "from fastai2.vision.widgets import *"
->>>>>>> af263f5a405a2f04be6e515e83159cad0c0bd85e
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 14,
-=======
-   "execution_count": 19,
->>>>>>> af263f5a405a2f04be6e515e83159cad0c0bd85e
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,11 +45,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 15,
-=======
-   "execution_count": 30,
->>>>>>> af263f5a405a2f04be6e515e83159cad0c0bd85e
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -74,11 +58,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 16,
-=======
-   "execution_count": 31,
->>>>>>> af263f5a405a2f04be6e515e83159cad0c0bd85e
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -96,11 +76,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 17,
-=======
-   "execution_count": 32,
->>>>>>> af263f5a405a2f04be6e515e83159cad0c0bd85e
+   "execution_count": 26,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -113,11 +89,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 18,
-=======
-   "execution_count": 33,
->>>>>>> af263f5a405a2f04be6e515e83159cad0c0bd85e
+   "execution_count": 27,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -130,11 +102,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 19,
-=======
-   "execution_count": 34,
->>>>>>> af263f5a405a2f04be6e515e83159cad0c0bd85e
+   "execution_count": 28,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -148,11 +116,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 20,
-=======
-   "execution_count": 35,
->>>>>>> af263f5a405a2f04be6e515e83159cad0c0bd85e
+   "execution_count": 29,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -165,11 +129,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 21,
-=======
-   "execution_count": 36,
->>>>>>> af263f5a405a2f04be6e515e83159cad0c0bd85e
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -201,26 +161,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-<<<<<<< HEAD
-       "model_id": "2b48daed36754af2a36e628512082dbc",
-=======
-       "model_id": "53130c1b5c2345cabcc2751bf318e604",
->>>>>>> af263f5a405a2f04be6e515e83159cad0c0bd85e
+       "model_id": "ca9894dad4c0435bb1741b76c40a1616",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "VBox(children=(Label(value='Select your bear!'), FileUpload(value={}, description='Upload'), Output(), Label(v…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
